--- a/CSS/kräftorna.css
+++ b/CSS/kräftorna.css
@@ -1,3 +1,11 @@
-body {
-    background-color: black;
-}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  body {
+    font-family: poppins;
+    align-items: center;
+    background-image: url(https://i.postimg.cc/C5sRSDdr/7922-AAAD-011-F-44-BB-8309-B1-AA8-F6-ABC56.jpg);
+  }
