--- a/CSS/kräftorna.css
+++ b/CSS/kräftorna.css
@@ -17,3 +17,8 @@
     justify-content: center;
     justify-content: space-around;
     }   
+
+    .aktuell_bok {
+      display: flex;
+      top-margin: 10px;
+    }
